feat: Enhance simulation controls and visuals
- Added camera reset functionality to the App component to adjust the view based on scenario changes.
- Updated trail length calculations in the App component for improved visual clarity based on speed.
- Modified Controls component to reflect the transition from a Runge-Kutta 4 to a 3-Body Physics Engine.
- Adjusted styling in the Controls component for better layout and user interaction.
- Enhanced CSS for backdrop blur effects, improving visual feedback on hover.

--- a/src/mystyle.css
+++ b/src/mystyle.css
@@ -378,7 +378,7 @@ video {
   min-width:150px
 }
 .max-w-md {
-  max-width:28rem
+  max-width:18rem
 }
 .cursor-pointer {
   cursor:pointer
@@ -625,7 +625,13 @@ video {
 .backdrop-blur-md {
   --tw-backdrop-blur:blur(12px);
   -webkit-backdrop-filter:var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-  backdrop-filter:var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia)
+  backdrop-filter:var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+  opacity: 0.6;
+}
+.backdrop-blur-md:hover {
+ opacity: 0.85;
+ /* transition:ease-out opacity 0.5s ease; */
+ border: 1px solid #18dbfe95 ;
 }
 .backdrop-blur-sm {
   --tw-backdrop-blur:blur(4px);
